# auv-2015

./: .brackets.json  .gitignore  README.md  gyro_2_minutes.bag  topics
catkin_ws/src/arduino/: CMakeLists.txt  package.xml
catkin_ws/src/arduino/blinky/: blinky.ino  sin_table.h
catkin_ws/src/arduino/launch/: radio.launch  teensy.launch
catkin_ws/src/arduino/radio_interrupt/: ArduinoHardware.h  Radio_interrupt.ino  radio_interrupt.ino
catkin_ws/src/arduino/radio_interrupt_EBP/: radio_interrupt_EBP.ino  ros.h
catkin_ws/src/arduino/solenoid_test/: solenoid_test.ino
catkin_ws/src/arduino/teensy/: MS5803_I2C.cpp  MS5803_I2C.h  define.h  defs.h  teensy.ino
catkin_ws/src/arduino/teensy_depth/: MS5803_I2C.h  defs.h  teensy_depth.ino
catkin_ws/src/arduino_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/arduino_msgs/msg/: Solenoid.msg
catkin_ws/src/auv_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/auv_msgs/action/: AcousticServo.action  InitializeHorizon.action  SetCVTarget.action  SetPosition.action  SetVelocity.action
catkin_ws/src/auv_msgs/msg/: AcousticServo.msg  CPUTemperature.msg  CVTarget.msg  MotorCommands.msg  ObjectID.msg  RadioCommands.msg  RangeBearingElevation.msg  SetPosition.msg  SetVelocity.msg  SlamEstimate.msg  SlamTarget.msg  SolenoidCommands.msg  SonarTarget.msg  TDOAs.msg
catkin_ws/src/auv_msgs/srv/: ConfidenceRadius.srv  Covariance.srv  RcMode.srv  ReinitializeHorizon.srv  XYConfidenceRadius.srv
catkin_ws/src/computer_vision/: CMakeLists.txt  CMakeLists.txt~  package.xml  scripts  setup.py
catkin_ws/src/computer_vision/.metadata/: version.ini
catkin_ws/src/computer_vision/Dataset/: out_y.data
catkin_ws/src/computer_vision/camera_calibration/: 00b09d0100cd1e8a.yaml  00b09d0100cd1e8c.yaml  00b09d0100cd1e8d.yaml  calibration_camera_down.yaml  camera_calibration_nopv_cimlab.yaml  lastA.yaml  lastD.yaml
catkin_ws/src/computer_vision/configs/: canny.config
catkin_ws/src/computer_vision/include/computer_vision/: buoy.hpp  histogram.hpp  object_finder.hpp  threshold.hpp
catkin_ws/src/computer_vision/launch/: bin_test.launch  buoy_test.launch  calibrate_mono_camera.launch  camera_base.launch  camera_down.launch  camera_front_left.launch  camera_front_right.launch  computer_vision.launch  line_test.launch  mono_odometry_record_data.launch  mono_odometry_test.launch  monocular_odometry_test.launch  vivi_camera_all.launch  vivi_testing.launch
catkin_ws/src/computer_vision/msg/: ObjectImageLocation.msg
catkin_ws/src/computer_vision/scripts/: bin_detection  bin_detection.py  buoy_detection.py  channels  cv_server  fireant_so  hough_circles  lane_detection  lane_detection.py  mser  reroute_polygons  topic_check.py  video2ros  video_publisher
catkin_ws/src/computer_vision/src/: buoy.cpp  computer_vision_COLOR.cpp  computer_vision_a.cpp  filters.cpp  histogram.cpp  histogram.py  hough_circles  image_node.py  image_publish.cpp  imshow.cpp  learn_knearest.py  number_extractor.py  number_refinery.py  object_finder.cpp  phone_cam.py  phone_cam_2.py  pipe_manager.py  plumber.py  pyterface.cpp  simple_pipe.py  template.py  threshold.cpp  voodoo_filter.py
catkin_ws/src/computer_vision/src/cv_backbone/: CvBackbone.py  filters.py
catkin_ws/src/computer_vision/src/object_tracking/: bins_model.py  tracker.py
catkin_ws/src/computer_vision/src/quick_test/: quick_test
catkin_ws/src/hydrophones/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/hydrophones/launch/: hydrophones.launch  param.yaml
catkin_ws/src/hydrophones/msg/: Pinger.msg  TDOA.msg
catkin_ws/src/hydrophones/scripts/: tdoa.py
catkin_ws/src/hydrophones/scripts/models/: __init__.py  audio.py  env.py  mic.py
catkin_ws/src/hydrophones/src/hydrophones/: __init__.py  freq.py  gccphat.py  multilateration.py
catkin_ws/src/hydrophones/test/: test_compute_tdoa.py  test_multilateration.py
catkin_ws/src/simulator/: CMakeLists.txt  LICENSE  README.md  logger.txt  package.xml
catkin_ws/src/simulator/include/: create_torpedo.h  launch_torpedo.h  movel_model.h  robot.h
catkin_ws/src/simulator/launch/: bin_task.launch  simulator.launch  test_camera.launch
catkin_ws/src/simulator/models/: BinColor.dae  BinColor1.dae  BinColor4.dae  BlueBuoyColor.dae  Dropoff.dae  EmptyBin.dae  GateColor.dae  GreenBuoy.dae  GreenBuoyColor.dae  LeverColor.dae  PathColor.dae  PizzaBoxColor.dae  PizzaStand.dae  RedBuoy.dae  RedBuoyColor.dae  RoboSub10.dae  RoboSub16.dae  RoboSub37.dae  RoboSub98.dae  RobotColorGazebo.dae  RobotGazebo.dae  Torpedo.dae  TorpedoTargetsColors.dae  TrafficLight.dae  WheelDisconnectedColor.dae  WheelTaskWallColor.dae  YellowBuoy.dae  YellowBuoyColor.dae  mesh_test.world
catkin_ws/src/simulator/src/: ThrusterForces.h  create_torpedo.cc  gazeboDepthEstimator.cpp  launch_torpedo.cc  move_model.cc  robot.cc  tf_broadcaster_simulator.cpp
catkin_ws/src/simulator/test/: test_robot.cc
catkin_ws/src/simulator/worlds/: simulator.world
catkin_ws/src/sonar_proc/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/sonar_proc/src/sonar_proc/: __init__.py
catkin_ws/src/state_estimation/: CMakeLists.txt  CMakeLists.txt~  package.xml  sim_state_estimation.launch  state_estimation.launch
catkin_ws/src/state_estimation/depth/scripts/: depth  sim_depth
catkin_ws/src/state_estimation/depth/util/: 19th_2_minutes.bag  ground_2_minutes.bag  pressure_deviation.py  pressure_variance.py
catkin_ws/src/state_estimation/launch/: sim_state_estimation.launch  state_estimation.launch  test_ukf.launch  ukf_debug.launch
catkin_ws/src/state_estimation/pose/: CMakeLists.txt
catkin_ws/src/state_estimation/pose/scripts/: calibrate.py  sim_imu
catkin_ws/src/state_estimation/pose/src/: .XimuPublisher.cpp.swp  XimuPublisher.cpp  bumpSensor.cpp
catkin_ws/src/state_estimation/tf/: CMakeLists.txt  north_publisher.cpp
catkin_ws/src/state_estimation/ukf/: CMakeLists.txt
catkin_ws/src/status/: CMakeLists.txt  package.xml
catkin_ws/src/status/launch/: status.launch
catkin_ws/src/status/scripts/: auto_shutdown  battery_lights  initialize_horizon_lights  temperature
nodejs/: app.js  (+1 more)
(+473 files in other folders)
