<?xml version="1.0"?>
<package>
  <name>arduino</name>
  <version>0.0.0</version>
  <description>The arduino package</description>

  <maintainer email="maxkrogius@gmail.com">Max Krogius</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>auv_msgs</build_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_python</run_depend>
</package>
