cmake_minimum_required(VERSION 2.8.3)
project(auv_msgs)

find_package(catkin REQUIRED COMPONENTS
  message_generation
  actionlib_msgs
  std_msgs
)

add_message_files(FILES
  #added by Elec Interface
  Solenoid.msg
  Motor.msg

  #added by Controls
  SetPosition.msg
  SetVelocity.msg
  MotorCommands.msg

  #added by State Estimation
  RangeBearingElevation.msg
  SlamEstimate.msg

  #added by hydrophones
  Signals.msg
)

add_service_files(FILES
  ConfidenceRadius.srv
  XYConfidenceRadius.srv
  Covariance.srv
)

add_action_files(
  DIRECTORY action
  FILES SetVelocity.action
)


generate_messages(DEPENDENCIES actionlib_msgs std_msgs)
catkin_package(CATKIN_DEPENDS message_runtime actionlib_msgs)

