<?xml version="1.0"?>
<package>
  <name>auv_msgs</name>
  <version>0.0.0</version>
  <description>The auv_msgs package</description>
  <maintainer email="mr@anassinator.com">Anass Al</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
