<?xml version="1.0"?>
<package>
  <name>catkin_ws</name>
  <version>0.0.0</version>
  
  <description>
  The computer vision package used for McGill Robotics: Robosub Team
  </description>
  
  <maintainer email="jean-sebastien.dery@mail.mcgill.ca">Jean-Sebastien Dery</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="website">http://mcgillrobotics.com/</url>
  
  <!-- Members of the Computer Vision Section for the 2013-2014 year. -->
  <author email="jean-sebastien.dery@mail.mcgill.ca">Jean-Sebastien Dery</author>

  <!-- This will allow ROS to generate the custom ROS Message type for different languages (C++, Python, etc.) -->
  <build_depend>message_generation</build_depend>
  <!-- This will allow ROS to use the generated custom ROS Message type during runtime by this and other packages. -->
  <run_depend>message_runtime</run_depend>

  <!-- Package's dependencies. -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
 

  <run_depend>cv_bridge</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
