<?xml version="1.0"?>
<package>
  <name>sonar_proc</name>
  <version>0.0.1</version>
  <description>
    This package provides ROS nodes to control the sonar and process the data.
  </description>
  <maintainer email="mr@anassinator.com">anassinator</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
