<?xml version="1.0"?>
<package>
  <name>status</name>
  <version>0.1.0</version>
  <description>The status package</description>

  <maintainer email="mr@anassinator.com">Anass Al</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>auv_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>auv_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
